force-app/main/default/objects/Scope_Poc_Information__c/Scope_Poc_Information__c.object-meta.xml
<CustomObject>
    <label>Scope - Poc Information</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>