force-app/main/default/objects/Scope_Poc_Information__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <label>Approver</label>
    <length>25</length>
    <type>Text</type>
</CustomField>