force-app/main/default/objects/Scope_Poc_Information__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <label>Pre-requisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>