force-app/main/default/objects/Scope_Poc_Information__c/fields/AutoRABIT_POC__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AutoRABIT POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scopes</relationshipName>
    <type>Lookup</type>
</CustomField>