force-app/main/default/objects/Scope_Poc_Information__c/fields/Is_primary__c.field-meta.xml
<CustomField>
    <fullName>Is_primary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is primary</label>
    <type>Checkbox</type>
</CustomField>