force-app/main/default/objects/Scope_Poc_Information__c/fields/License_provision_complete__c.field-meta.xml
<CustomField>
    <fullName>License_provision_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License &amp; Provision Complete</label>
    <type>Checkbox</type>
</CustomField>