force-app/main/default/objects/Scope_Poc_Information__c/fields/Out_ofScope__c.field-meta.xml
<CustomField>
    <fullName>Out_ofScope__c</fullName>
    <label>Out of Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>