force-app/main/default/objects/Scope_Poc_Information__c/fields/Person_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Person_to_Contact__c</fullName>
    <label>Person to Contact</label>
    <length>25</length>
    <type>Text</type>
</CustomField>