force-app/main/default/objects/Scope_Poc_Information__c/fields/Poc_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Poc_End_Date__c</fullName>
    <label>Poc End Date</label>
    <type>Date</type>
</CustomField>