force-app/main/default/objects/Scope_Poc_Information__c/fields/Poc_Scope__c.field-meta.xml
<CustomField>
    <fullName>Poc_Scope__c</fullName>
    <label>Poc Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>