force-app/main/default/objects/Scope_Poc_Information__c/fields/Poc_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Poc_Start_Date__c</fullName>
    <label>Poc- Start Date</label>
    <type>Date</type>
</CustomField>