force-app/main/default/objects/Scope_Poc_Information__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>In Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Version Control -EZ Commits</fullName>
            </value>
            <value>
                <fullName>Data Loader</fullName>
            </value>
            <value>
                <fullName>Sync Orgs</fullName>
            </value>
            <value>
                <fullName>Selective Deployment</fullName>
            </value>
            <value>
                <fullName>Test Automation</fullName>
            </value>
            <value>
                <fullName>Automated Deployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>