force-app/main/default/objects/Scope_Poc_Information__c/fields/sign_off_Criteria__c.field-meta.xml
<CustomField>
    <fullName>sign_off_Criteria__c</fullName>
    <defaultValue>&quot;AutoRABIT has to successfully demonstrate to clients satisfaction what has been outlined in Scope.&quot;</defaultValue>
    <label>Sign-off Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>